# FoundryTools

./: .env  .gitignore  README.md  pyproject.toml
.github/workflows/: release-module.yaml  update-music-mapping.yaml
app/: main.py
macros/: README.md  music-inserter.js  tile-visibility-browser.js
modules/folder-api/: api.js  module.json
music-formatter/: main.py
scripts/: music-inserter.js
